Updated Developer Guide: Maintaining an installation (markdown)